Add MongoDB Playground exercise to guide users on running queries in VS Code

--- a/4. Using VS Code for MongoDB.md
+++ b/4. Using VS Code for MongoDB.md
@@ -121,7 +121,60 @@ Beyond querying and managing data, VS Code also lets us perform more advanced ta
 
 ---
 
-## 7. Summary
+## 7. MongoDB Playground Exercise
+
+In this exercise, you will learn how to run basic MongoDB queries using the **Playground** in Visual Studio Code.
+
+### Prerequisites
+
+1. **Visual Studio Code** installed on your system.
+2. The **MongoDB for VS Code** extension installed.
+3. Access to a MongoDB database (either local MongoDB or MongoDB Atlas).
+
+### Create a MongoDB Playground
+
+1. **Open VS Code** and make sure the **MongoDB for VS Code** extension is installed.
+   - If not installed, go to the **Extensions** view (`Ctrl+Shift+X`), search for **MongoDB for VS Code**, and install it.
+
+2. **Open MongoDB in VS Code**:
+   - Click on the **MongoDB** icon in the Activity Bar on the left side.
+   - If you haven't connected to MongoDB yet, click on **"Connect to MongoDB"** and enter your connection string (e.g., `mongodb://localhost:27017` or the connection string from your MongoDB Atlas account).
+
+3. **Create a New Playground**:
+   - Right-click on the **MongoDB Explorer** panel (on the left) and select **Create New Playground**.
+   - A new tab will open where you can write MongoDB queries.
+   - This tab allows you to interact with your MongoDB instance by running JavaScript-based queries.
+
+### Write and Execute Queries in the Playground
+
+#### A. Insert Sample Data
+
+- First, let's insert a document into a collection.
+- In the Playground, type the following code to insert a sample user document into a collection named `users` in the `testDB` database.
+
+  ```js
+  db.users.insertOne({
+    name: "John Doe",
+    age: 28,
+    city: "New York"
+  })
+
+
+#### B. Run the Insert Query
+
+- To execute the query, press Ctrl+Shift+P (Windows/Linux) or Cmd+Shift+P (Mac) to open the command palette.
+- Type "MongoDB: Run Query" and hit Enter.
+- This will insert the document into the users collection.
+
+#### C. Verify the Insert
+
+- To confirm the document was inserted, run the following find query in the Playground:
+
+`db.users.find({ name: "John Doe" })`
+
+---
+
+## 8. Summary
 
 To summarize, we’ve learned how to use VS Code with MongoDB to manage and query data efficiently. We’ve set up the MongoDB extension, connected to a MongoDB instance, managed databases and collections, run queries, and used MongoDB snippets to streamline our workflow. With these tools, you’re well-equipped to interact with MongoDB in a modern, streamlined development environment.
 
